--- a/package.json
+++ b/package.json
@@ -2,23 +2,34 @@
   "name": "cryptocoins-icons",
   "version": "2.3.0",
   "description": "Cryptocoins is the most complete free vector/webfont iconpack of your favourite cryptocurrencies",
-  "main": "gulpfile.js",
+  "keywords": [
+    "cryptocurrency",
+    "cryptocurrencies",
+    "cryptocoin",
+    "bitcoin",
+    "ethereum",
+    "crypto",
+    "icons",
+    "icon"
+  ],
   "dependencies": {
-    "gulp": "^3.9.1"
-  },
-  "devDependencies": {
     "gulp": "^3.9.1",
-    "pump": "^1.0.2",
-    "gulp-svgmin": "^1.2.4"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gulp-iconfont": "^8.0.1",
+    "gulp-iconfont-css": "^2.1.0",
+    "gulp-svgmin": "^1.2.4",
+    "pump": "^1.0.2"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/allienworks/cryptocoins.git"
   },
-  "author": "Martin Allien <martin@allienworks.net> (https://allien.work)",
+  "bugs": {
+    "url": "http://github.com/allienworks/cryptocoins/issues"
+  },
+  "author": {
+    "name": "Martin Allien",
+    "web": "https://allien.work"
+  },
   "license": "MIT",
-  "homepage": "https://github.com/allienworks/cryptocoins"
+  "homepage": "https://github.com/allienworks/cryptocoins",
 }
