tweaked webfont generator, updated readme

--- a/package.json
+++ b/package.json
@@ -31,5 +31,5 @@
     "web": "https://allien.work"
   },
   "license": "MIT",
-  "homepage": "https://github.com/allienworks/cryptocoins",
+  "homepage": "https://github.com/allienworks/cryptocoins"
 }
